# dukascopy

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
test/: test_read_bi5.cpp
